# AndroidCmakeOpenCV

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/example/com/androidcmakeopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/example/com/androidcmakeopencv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/example/com/androidcmakeopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
